About Me Page is "about" done. :)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
      <link href="https://fonts.googleapis.com/css?family=Sacramento&display=swap" rel="stylesheet">
-     
+     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
      <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Gabriella's Portfolio</title>
@@ -20,24 +20,51 @@
           <a href="#!" id="name" class="brand-logo">Gabriella Quattrone</a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="georgia-font right hide-on-med-and-down">
-            <li><a href="about.html">About</a></li>
+            <li><a href="index.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
       </nav>
     
-      <ul class="sidenav" id="mobile-demo">
-        <li><a href="about.html">About</a></li>
+      <ul class="sidenav georgia-font" id="mobile-demo">
+        <li><a href="index.html">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-          <!-- Compiled and minified JavaScript -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
+      <div id="about-me" class="container">
+        <div class="row">
+          <div class="col s6">
+            <img class="responsive-img" src="assets/images/me.jpeg">
+          </div>
+          <div id="info" class="col s6 georgia-font"><ul>
+              <li><strong>Email:</strong> <a class="link-color" href="#">gfquattrone at ucdavis dot edu</a></li>
+              <li><strong>Github:</strong> <a class="link-color" href="https://github.com/gabriellaquattrone"
+                  target="_blank">@gabriellaquattrone</a></li>
+            </ul>
+          </div>
+        </div> 
+      </div>
+      <div class="row">
+          <div class="col s12">
+              <div>
+                <h2 class="cursive-font">About Me</h2>
+                <div class="divider"></div>
+              </div>
+              <p class="text-center georgia-font">I am a full stack developer with an interest in cyber-security. <br>
+                I graduated from the University of California, Davis with a B.S. in Computer Science and a B.A. in Japanese.
+                <br>
+                Throughout my tenure, I gained experience developing responsive web solutions using broad knowledge of
+                multiple programming languages and frameworks including but not limited to HTML/CSS/JavaScript/React.<br>
+                Please have a look at my portfolio and feel free to contact me about any job inquiries. </p>
+            </div>
+      </div>
+          <!-- Compiled and minified JavaScript -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"></script>
+          integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+          crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       <script src="assets/javascript/app.js"></script>
 </body>
 </html>
