Website looks good. Gotta check mobile.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
           <ul class="georgia-font right hide-on-med-and-down">
             <li><a href="index.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
       </nav>
@@ -30,13 +29,12 @@
       <ul class="sidenav georgia-font" id="mobile-demo">
         <li><a href="index.html">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
       </ul>
 
-      <div id="about-me" class="container">
+      <div id="about-me" class="container wrapper">
         <div class="row">
           <div class="col s6">
-            <img class="responsive-img" src="assets/images/me.jpeg">
+            <img class="circle responsive-img" src="assets/images/me.jpeg">
           </div>
           <div id="info" class="col s6 georgia-font"><ul>
               <li><strong>Email:</strong> <a class="link-color" href="#">gfquattrone at ucdavis dot edu</a></li>
@@ -44,8 +42,7 @@
                   target="_blank">@gabriellaquattrone</a></li>
             </ul>
           </div>
-        </div> 
-      </div>
+        </div>  
       <div class="row">
           <div class="col s12">
               <div>
@@ -59,7 +56,16 @@
                 multiple programming languages and frameworks including but not limited to HTML/CSS/JavaScript/React.<br>
                 Please have a look at my portfolio and feel free to contact me about any job inquiries. </p>
             </div>
+            <div class="push"></div>
       </div>
+    </div>
+      <footer class="footer">
+          <div class="footer-copyright">
+            <div class="container">
+            © 2019 Copyright
+            </div>
+          </div>
+        </footer>
           <!-- Compiled and minified JavaScript -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
           integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
