--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Fruitful Health</span>
-                        <p><a href="#">http://www.fruitfulhealth.org/</a></p>
+                        <p><a href="http://www.fruitfulhealth.org/"><button>View</button></a></p>
                     </div>
                 </div>
                 <div class="card">
@@ -49,7 +49,7 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Hangman</span>
-                        <p><a href="#">https://gabriellaquattrone.github.io/word-guess-game/</a></p>
+                        <p><a href="https://gabriellaquattrone.github.io/word-guess-game/"><button>View</button></a></p>
                     </div>
                 </div>
                 <div class="card">
@@ -58,7 +58,7 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Weather Forecast</span>
-                        <p><a href="#">https://gabriellaquattrone.github.io/weather-forecast/</a></p>
+                        <p><a href="https://gabriellaquattrone.github.io/weather-forecast/"><button>View</button></a></p>
                     </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Japanese Trivia Game</span>
-                        <p><a href="#">https://gabriellaquattrone.github.io/trivia-game/</a></p>
+                        <p><a href="https://gabriellaquattrone.github.io/trivia-game/"><button>View</button></a></p>
                     </div>
                 </div>
                 <div class="card">
@@ -78,7 +78,7 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Kaiwa Hour</span>
-                        <p><a href="#">https://kaiwahour.github.io/home/</a></p>
+                        <p><a href="https://kaiwahour.github.io/home/"><button>View</button></a></p>
                     </div>
                 </div>
                 <div class="card">
@@ -87,7 +87,7 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Friendly Search</span>
-                        <p><a href="#">https://deanmccluskey.github.io/Project-1/</a></p>
+                        <p><a href="https://deanmccluskey.github.io/Project-1/"><button>View</button></a></p>
                     </div>
                 </div>
             </div>
