--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,15 @@
                 </div>
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/friendfinder.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Friend Finder</span>
+                        <p><a href="https://github.com/gabriellaquattrone/friend-finder"><button>View</button></a></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/hangman.png">
                     </div>
                     <div class="card-content">
